OnlineCompile/wwwroot/online_tools/Compile/file/C/log
/home/tp/project/OnlineCompile/wwwroot/online_tools/Compile/file/edit.c: In function ‘main’:
/home/tp/project/OnlineCompile/wwwroot/online_tools/Compile/file/edit.c:6:4: error: ‘cout’ undeclared (first use in this function)
    cout<<"hello"<<endl;
    ^
/home/tp/project/OnlineCompile/wwwroot/online_tools/Compile/file/edit.c:6:4: note: each undeclared identifier is reported only once for each function it appears in
/home/tp/project/OnlineCompile/wwwroot/online_tools/Compile/file/edit.c:6:19: error: ‘endl’ undeclared (first use in this function)
    cout<<"hello"<<endl;
                   ^
make: *** [/home/tp/project/OnlineCompile/wwwroot/online_tools/Compile/file/compile] Error 1
